generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"  
}

//////////////////////
// ENUMS (STATE MACHINES)
//////////////////////

enum Role {
  USER
  RIDER
  STORE
  ADMIN
}

enum OrderStatus {
  CREATED
  PAID
  PREPARING
  READY_FOR_PICKUP
  OUT_FOR_DELIVERY
  DELIVERED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  REFUNDED
}

enum DeliveryStatus {
  ASSIGNED
  PICKED_UP
  DELIVERED
  CANCELLED
}

//////////////////////
// AUTH / IDENTITY
//////////////////////

model Account {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      Role
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  user          User?
  rider         Delivery_partner?
  store         Store?
  refreshTokens Refresh_token[]
}

model Refresh_token {
  id         Int      @id @default(autoincrement())
  token      String   @unique
  accountId  Int
  revoked    Boolean  @default(false)
  expiresAt  DateTime
  createdAt  DateTime @default(now())

  account Account @relation(fields: [accountId], references: [id], onDelete: Cascade)

  @@index([accountId])
}

//////////////////////
// USER (CUSTOMER)
//////////////////////

model User {
  id        Int      @id @default(autoincrement())
  accountId Int      @unique
  name      String?
  phone     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  account   Account @relation(fields: [accountId], references: [id], onDelete: Cascade)
  addresses User_address[]
  orders    Order[]
}

model User_address {
  id        Int      @id @default(autoincrement())
  userId    Int
  address   String
  city      String
  state     String
  pincode   String
  country   String   @default("INDIA")
  landmark  String?
  isDefault Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  // Orders delivered to this address
  orders Order[]

  @@index([userId])
}

//////////////////////
// STORE
//////////////////////

model Store {
  id        Int      @id @default(autoincrement())
  accountId Int      @unique
  name      String
  address   String
  latitude  Float
  longitude Float
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  account    Account @relation(fields: [accountId], references: [id], onDelete: Cascade)
  inventory  Inventory[]
  orders     Order[]
}

//////////////////////
// CATALOG
//////////////////////

model Category {
  id          Int      @id @default(autoincrement())
  name        String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  products Product[]
}

model Product {
  id          Int      @id @default(autoincrement())
  name        String
  description String?
  price       Float
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  categoryId Int
  category   Category @relation(fields: [categoryId], references: [id])

  inventory Inventory[]
  orderItems Order_item[]
}

//////////////////////
// INVENTORY
//////////////////////

model Inventory {
  id               Int      @id @default(autoincrement())
  productId        Int
  storeId          Int
  quantity         Int
  reservedQuantity Int      @default(0)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  product Product @relation(fields: [productId], references: [id])
  store   Store   @relation(fields: [storeId], references: [id])

  @@unique([productId, storeId])
  @@index([productId])
  @@index([storeId])
}

//////////////////////
// ORDERS
//////////////////////

model Order {
  id               Int           @id @default(autoincrement())
  userId           Int
  storeId          Int
  deliveryAddressId Int
  totalAmount      Float
  status           OrderStatus   @default(CREATED)
  paymentStatus    PaymentStatus @default(PENDING)
  createdAt        DateTime      @default(now())
  updatedAt        DateTime      @updatedAt

  user             User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  store            Store         @relation(fields: [storeId], references: [id])
  deliveryAddress  User_address  @relation(fields: [deliveryAddressId], references: [id])
  items            Order_item[]
  events           Order_event[]
  assignment       Delivery_assignment?

  @@index([userId])
  @@index([storeId])
}

model Order_item {
  id        Int      @id @default(autoincrement())
  orderId   Int
  productId Int
  quantity  Int
  priceAtPurchase Float
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id])

  @@index([orderId])
  @@index([productId])
}

model Order_event {
  id          Int      @id @default(autoincrement())
  orderId     Int
  eventType   String
  triggeredBy String
  status      String
  createdAt   DateTime @default(now())

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
}

//////////////////////
// DELIVERY (RIDER)
//////////////////////

model Delivery_partner {
  id          Int      @id @default(autoincrement())
  accountId   Int      @unique
  name        String
  phone       String
  vehicleNo   String
  isActive    Boolean  @default(true)
  isAvailable Boolean  @default(true)
  rating      Float    @default(0)
  createdAt   DateTime @default(now())

  account     Account @relation(fields: [accountId], references: [id], onDelete: Cascade)
  assignments Delivery_assignment[]
  locations   Partner_location_log[]
}

model Delivery_assignment {
  id          Int            @id @default(autoincrement())
  orderId     Int            @unique
  partnerId   Int
  status      DeliveryStatus @default(ASSIGNED)
  assignedAt  DateTime       @default(now())
  deliveredAt DateTime?

  order   Order            @relation(fields: [orderId], references: [id], onDelete: Cascade)
  partner Delivery_partner @relation(fields: [partnerId], references: [id])

  @@index([partnerId])
}

model Partner_location_log {
  id        Int      @id @default(autoincrement())
  partnerId Int
  latitude  Float
  longitude Float
  loggedAt  DateTime @default(now())

  partner Delivery_partner @relation(fields: [partnerId], references: [id])

  @@index([partnerId])
}
