//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  role Role [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  rider Delivery_partner
  store Store
  refreshTokens Refresh_token [not null]
}

Table Refresh_token {
  id Int [pk, increment]
  token String [unique, not null]
  accountId Int [not null]
  revoked Boolean [not null, default: false]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  account Account [not null]
}

Table User {
  id Int [pk, increment]
  accountId Int [unique, not null]
  name String
  phone String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  account Account [not null]
  addresses User_address [not null]
  orders Order [not null]
}

Table User_address {
  id Int [pk, increment]
  userId Int [not null]
  address String [not null]
  city String [not null]
  state String [not null]
  pincode String [not null]
  country String [not null, default: 'INDIA']
  landmark String
  isDefault Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  orders Order [not null]
}

Table Store {
  id Int [pk, increment]
  accountId Int [unique, not null]
  name String [not null]
  address String [not null]
  latitude Float [not null]
  longitude Float [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  account Account [not null]
  inventory Inventory [not null]
  orders Order [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  description String
  price Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categoryId Int [not null]
  category Category [not null]
  inventory Inventory [not null]
  orderItems Order_item [not null]
}

Table Inventory {
  id Int [pk, increment]
  productId Int [not null]
  storeId Int [not null]
  quantity Int [not null]
  reservedQuantity Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  store Store [not null]

  indexes {
    (productId, storeId) [unique]
  }
}

Table Order {
  id Int [pk, increment]
  userId Int [not null]
  storeId Int [not null]
  deliveryAddressId Int [not null]
  totalAmount Float [not null]
  status OrderStatus [not null, default: 'CREATED']
  paymentStatus PaymentStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  store Store [not null]
  deliveryAddress User_address [not null]
  items Order_item [not null]
  events Order_event [not null]
  assignment Delivery_assignment
}

Table Order_item {
  id Int [pk, increment]
  orderId Int [not null]
  productId Int [not null]
  quantity Int [not null]
  priceAtPurchase Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Order [not null]
  product Product [not null]
}

Table Order_event {
  id Int [pk, increment]
  orderId Int [not null]
  eventType String [not null]
  triggeredBy String [not null]
  status String [not null]
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
}

Table Delivery_partner {
  id Int [pk, increment]
  accountId Int [unique, not null]
  name String [not null]
  phone String [not null]
  vehicleNo String [not null]
  isActive Boolean [not null, default: true]
  isAvailable Boolean [not null, default: true]
  rating Float [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  account Account [not null]
  assignments Delivery_assignment [not null]
  locations Partner_location_log [not null]
}

Table Delivery_assignment {
  id Int [pk, increment]
  orderId Int [unique, not null]
  partnerId Int [not null]
  status DeliveryStatus [not null, default: 'ASSIGNED']
  assignedAt DateTime [default: `now()`, not null]
  deliveredAt DateTime
  order Order [not null]
  partner Delivery_partner [not null]
}

Table Partner_location_log {
  id Int [pk, increment]
  partnerId Int [not null]
  latitude Float [not null]
  longitude Float [not null]
  loggedAt DateTime [default: `now()`, not null]
  partner Delivery_partner [not null]
}

Enum Role {
  USER
  RIDER
  STORE
  ADMIN
}

Enum OrderStatus {
  CREATED
  PAID
  PREPARING
  READY_FOR_PICKUP
  OUT_FOR_DELIVERY
  DELIVERED
  CANCELLED
}

Enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  REFUNDED
}

Enum DeliveryStatus {
  ASSIGNED
  PICKED_UP
  DELIVERED
  CANCELLED
}

Ref: Refresh_token.accountId > Account.id [delete: Cascade]

Ref: User.accountId - Account.id [delete: Cascade]

Ref: User_address.userId > User.id [delete: Cascade]

Ref: Store.accountId - Account.id [delete: Cascade]

Ref: Product.categoryId > Category.id

Ref: Inventory.productId > Product.id

Ref: Inventory.storeId > Store.id

Ref: Order.userId > User.id [delete: Cascade]

Ref: Order.storeId > Store.id

Ref: Order.deliveryAddressId > User_address.id

Ref: Order_item.orderId > Order.id [delete: Cascade]

Ref: Order_item.productId > Product.id

Ref: Order_event.orderId > Order.id [delete: Cascade]

Ref: Delivery_partner.accountId - Account.id [delete: Cascade]

Ref: Delivery_assignment.orderId - Order.id [delete: Cascade]

Ref: Delivery_assignment.partnerId > Delivery_partner.id

Ref: Partner_location_log.partnerId > Delivery_partner.id